--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,5 @@ javastart.googleCalendarSyncEnabled=false
 spring.datasource.username=javastart
 spring.datasource.password=javastart123
 spring.datasource.url=jdbc:h2:mem:testdb
+
+javastart.agreementsDir=files/agreements
