Przeniesienie własności do application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ javastart.sendboxUsername=javastarttester@gmail.com
 javastart.sendboxPassword=zleHaslo
 
 logging.level.pl.javastart.bootcamp.domain=DEBUG
+
+javastart.agreementsDir=files/agreements
